updated footer links

--- a/index.html
+++ b/index.html
@@ -114,8 +114,7 @@
                 <div class="waypoint" data-animation="fade-in">
                   <div class="label bold">Speed</div>
                   <div>
-                    Fast load times and lag free interaction, my highest
-                    priority.
+                    Efficient loading while minimizing lag is my goal.
                   </div>
                 </div>
               </div>
@@ -127,12 +126,12 @@
                   data-delay=".2s"
                 >
                   <div class="hexagon">
-                    <i class="mdi mdi-cellphone-link"></i>
+                    <i class="mdi mdi-responsive"></i>
                   </div>
                 </div>
                 <div class="waypoint" data-animation="fade-in" data-delay=".2s">
-                  <div class="label bold">Responsive</div>
-                  <div>My layouts will work on any device, big or small.</div>
+                  <div class="label bold">Flexible</div>
+                  <div>No matter what device you're on the page will look the way you want. </div>
                 </div>
               </div>
             </div>
@@ -144,12 +143,12 @@
                   data-delay=".4s"
                 >
                   <div class="hexagon">
-                    <i class="mdi mdi-lightbulb-outline"></i>
+                    <i class="mdi mdi-white-balance-incandescent"></i>
                   </div>
                 </div>
                 <div class="waypoint" data-animation="fade-in" data-delay=".4s">
                   <div class="label bold">Intuitive</div>
-                  <div>Strong preference for easy to use, intuitive UX/UI.</div>
+                  <div>Focused design that highlights ease of use for everyone.</div>
                 </div>
               </div>
 
@@ -160,14 +159,13 @@
                   data-delay=".6s"
                 >
                   <div class="hexagon">
-                    <i class="mdi mdi-rocket"></i>
+                    <i class="mdi mdi-auto-fix"></i>
                   </div>
                 </div>
                 <div class="waypoint" data-animation="fade-in" data-delay=".6s">
-                  <div class="label bold">Dynamic</div>
+                  <div class="label bold">Vibrant</div>
                   <div>
-                    Websites don't have to be static, I love making pages come
-                    to life.
+                    I love putting personality on the page by bringing a little magic.
                   </div>
                 </div>
               </div>
@@ -473,6 +471,11 @@
           <a href="https://medium.com/@tshuldberg999">
             <div class="flex icon" id="icon-5">
               <i class="mdi mdi-medium"></i>
+            </div>
+          </a>
+          <a href="https://github.com/tshuldberg">
+            <div class="flex icon" id="icon-5">
+              <i class="mdi mdi-github-circle"></i>
             </div>
           </a>
         </div>
